Fix switch stmt missing break issue.

A patch by dcb314@hotmail.com!

Maybe clang analyzer's false negative?

CCMAIL: artem.dergachev@gmail.com

BUG: 385677